[gd_scene load_steps=36 format=3 uid="uid://bwv8dk4au18ur"]

[ext_resource type="Script" path="res://Scripts/Boss/QueenFly.gd" id="1_pbu38"]
[ext_resource type="Texture2D" uid="uid://bbb50epocby6d" path="res://Pixelart/Boss/QueenFlyDie/Die1.png" id="2_7psvt"]
[ext_resource type="Texture2D" uid="uid://be1lleml5ea87" path="res://Pixelart/Boss/QueenFly/QueenFlyIdle1.png" id="3_12gra"]
[ext_resource type="Texture2D" uid="uid://b7fuc40ya35h0" path="res://Pixelart/Boss/QueenFlyDie/Die2.png" id="3_c0aye"]
[ext_resource type="Texture2D" uid="uid://bbn1wwxffbrbc" path="res://Pixelart/Boss/QueenFlyDie/Die3.png" id="4_ubetf"]
[ext_resource type="Texture2D" uid="uid://dd2uu3sincs72" path="res://Pixelart/HealthBar/BossUnderHealthBar.png" id="4_v65sm"]
[ext_resource type="Texture2D" uid="uid://bj5nwn004t1no" path="res://Pixelart/Boss/QueenFly/QueenFlyIdle2.png" id="4_yfq85"]
[ext_resource type="Texture2D" uid="uid://ddsme21di3whi" path="res://Pixelart/Boss/QueenFlyDie/Die4.png" id="5_b2608"]
[ext_resource type="Texture2D" uid="uid://bhh2amiag0f6s" path="res://Pixelart/Boss/QueenFly/QueenFlyIdle3.png" id="5_bau7o"]
[ext_resource type="Texture2D" uid="uid://y0x8my2wtecq" path="res://Pixelart/HealthBar/BossOverHealthBar.png" id="5_tkkd0"]
[ext_resource type="Texture2D" uid="uid://by5q7tsqamw5j" path="res://Pixelart/Boss/QueenFly/QueenFlySpawn1.png" id="6_cy2gk"]
[ext_resource type="Texture2D" uid="uid://cinvvbo6uqc1d" path="res://Pixelart/HealthBar/BossProgressHealthBar-Sheet.png" id="6_hsr6a"]
[ext_resource type="Texture2D" uid="uid://nb1yfjdil286" path="res://Pixelart/Boss/QueenFlyDie/Die5.png" id="6_jckx5"]
[ext_resource type="Script" path="res://Scripts/Boss/QueenFlyHealthBar.gd" id="7_0gtae"]
[ext_resource type="Texture2D" uid="uid://civdqfn5qxpfj" path="res://Pixelart/Boss/QueenFly/QueenFlySpawn2.png" id="7_3hcwu"]
[ext_resource type="Texture2D" uid="uid://dbvtgfxtopqay" path="res://Pixelart/Boss/QueenFlyDie/Die6.png" id="7_8rp46"]
[ext_resource type="Texture2D" uid="uid://qrgw8daga56" path="res://Pixelart/Boss/QueenFly/QueenFlySpawn3.png" id="8_3fnpo"]
[ext_resource type="Texture2D" uid="uid://cx2iwsdamnho3" path="res://Pixelart/Boss/QueenFlyDie/Die7.png" id="8_vch34"]
[ext_resource type="Texture2D" uid="uid://xip51gop2sgr" path="res://Pixelart/Boss/QueenFly/QueenFlySpawn4.png" id="9_mjg00"]
[ext_resource type="Texture2D" uid="uid://byrdw2kyibagu" path="res://Pixelart/Boss/QueenFly/QueenFlySpawn5.png" id="10_tb221"]
[ext_resource type="Texture2D" uid="uid://3a2heodvtfim" path="res://Pixelart/Boss/QueenFly/QueenFlyHit.png" id="11_x1rpw"]
[ext_resource type="FontFile" uid="uid://d035hso3t5o8i" path="res://Font/SVN-Coder's Crux.otf" id="16_fyykx"]
[ext_resource type="AudioStream" uid="uid://ddo5qg1its7x1" path="res://Sound/EnemiesSound/QueenFlyHurt.wav" id="16_smmht"]
[ext_resource type="AudioStream" uid="uid://cnurqj1joc87n" path="res://Sound/EnemiesSound/QueenFlyIdle.mp3" id="18_of2kl"]
[ext_resource type="AudioStream" uid="uid://1tvsa2qia1wp" path="res://Sound/QueenFlyMusic.mp3" id="18_ovi4u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lf08v"]
size = Vector2(48, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_o6k4c"]
radius = 227.035

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ql0gy"]
size = Vector2(68, 68)

[sub_resource type="Animation" id="Animation_v0m46"]
resource_name = "Die"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("11_x1rpw"), ExtResource("2_7psvt"), ExtResource("3_c0aye"), ExtResource("4_ubetf"), ExtResource("5_b2608"), ExtResource("6_jckx5"), ExtResource("7_8rp46"), ExtResource("8_vch34")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(20),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_4rt1o"]
resource_name = "Hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("11_x1rpw"), ExtResource("3_12gra")]
}

[sub_resource type="Animation" id="Animation_mt1it"]
resource_name = "Idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_12gra"), ExtResource("4_yfq85"), ExtResource("5_bau7o")]
}

[sub_resource type="Animation" id="Animation_w1xwy"]
resource_name = "Spawn"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_cy2gk"), ExtResource("7_3hcwu"), ExtResource("8_3fnpo"), ExtResource("9_mjg00"), ExtResource("10_tb221")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"getspawn1"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"getspawn2"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a527u"]
_data = {
"Die": SubResource("Animation_v0m46"),
"Hit": SubResource("Animation_4rt1o"),
"Idle": SubResource("Animation_mt1it"),
"Spawn": SubResource("Animation_w1xwy")
}

[sub_resource type="LabelSettings" id="LabelSettings_sggx8"]
font = ExtResource("16_fyykx")
font_size = 30

[sub_resource type="CircleShape2D" id="CircleShape2D_qy0ci"]
radius = 1319.01

[node name="QueenFly" type="CharacterBody2D" groups=["Boss"]]
z_index = 4
position = Vector2(20805, 47)
collision_layer = 2
script = ExtResource("1_pbu38")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_lf08v")

[node name="Detect" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource("CircleShape2D_o6k4c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ql0gy")
disabled = true

[node name="Container" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container"]
root_node = NodePath("../../Hitbox/CollisionShape2D")
libraries = {
"": SubResource("AnimationLibrary_a527u")
}
next/Hit = &"Spawn"
next/Spawn = &"Idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("11_x1rpw")

[node name="Spawnpoint" type="Marker2D" parent="."]
position = Vector2(-24, 0)

[node name="Spawnpoint2" type="Marker2D" parent="."]
position = Vector2(24, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="QueenFly" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture_under = ExtResource("4_v65sm")
texture_over = ExtResource("5_tkkd0")
texture_progress = ExtResource("6_hsr6a")
script = ExtResource("7_0gtae")

[node name="Label" type="Label" parent="CanvasLayer/QueenFly"]
layout_mode = 0
offset_left = 0.5
offset_top = -24.0
offset_right = 99.5
offset_bottom = -1.0
text = "QUEEN BUG"
label_settings = SubResource("LabelSettings_sggx8")

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_smmht")
max_distance = 1000.0

[node name="BattleMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_ovi4u")
pitch_scale = 1.3
max_distance = 9e+06

[node name="Fly" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_of2kl")
volume_db = 3.0
pitch_scale = 0.7
max_distance = 1500.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2(213.5, 500)
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2(-213.5, -500)
shape = SubResource("CircleShape2D_qy0ci")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="area_entered" from="Detect" to="." method="_on_detect_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_exited" from="ExitArea" to="." method="_on_exit_area_area_exited"]
